ensure images don't stretch

--- a/components/body/index.styl
+++ b/components/body/index.styl
@@ -135,6 +135,8 @@ section > a.is-active::after
     border-top-style none
     padding-top 0px
     margin-bottom 0px
+    // img
+    //   max-width 200px
     .body-img
       margin-top 0px
       height 65vw
@@ -182,9 +184,11 @@ section > a.is-active::after
 
   .small-rectangle
     height 210px
+    max-width 200px
 
   .vertical-rectangle
     height 280px
+    max-width 200px
 
   .staggered
     padding-top 150px
